--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "chart.js": "^2.9.3",
     "webpack": "4.43.0",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "websocket-extensions": ">=0.1.4"
   },
   "browserslist": [
     "last 2 versions",
